# fas-framework

./: .gitignore  Cargo.toml  README.md  build.sh  build_arm64_all.sh  build_mt6895.sh  build_mt6983.sh
MagiskModule/: customize.sh  module.prop  service.sh
src/: cpu_common.rs  cpu_common.rs.icp  cpu_common.rs.im  frame.rs  lib.rs  main.rs  misc.rs  mtk_gpu.rs  mtk_gpu_miui.rs  watcher_fbt_info.rs
src/controller/: README.md  cpu_common.rs  mod.rs  mtk_gpu.rs  mtk_gpu_miui.rs
src/core/: README.md  mod.rs  unit.rs  utils.rs
src/misc/: README.md  android_utils.rs  mod.rs  mount.rs
src/watcher/: README.md  mod.rs  watcher_fbt_info.rs
