[package]
name = "fas-framework"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
affinity = "0.1.2"
spin_sleep = "1.1.1"
crossbeam-channel = "0.5.7"