[package]
name = "fas-framework"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "fas-framework"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[dependencies]
libc = "0.2.142"
affinity = "0.1.2"
spin_sleep = "1.1.1"
crossbeam-channel = "0.5.8"